fixed background overflow

--- a/conuhacks-frontend/src/app/home/home.component.scss
+++ b/conuhacks-frontend/src/app/home/home.component.scss
@@ -4,6 +4,6 @@
     height:100%;
     margin: 0;
     padding:0;
-
+    overflow: hidden
 }
 
